--- a/time-series-analysis.ipynb
+++ b/time-series-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18277ab8307f4ca9ae91eb44a7e8e90a",
+       "model_id": "85f0a251756b43d783a506000296e4d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +454,382 @@
     "df_test_y = pd.read_csv('./data/rossmann-store-sales/test.csv',parse_dates=True,low_memory=False)\n",
     "df_test['Date'] = pd.to_datetime(df_test['Date'])\n",
     "df_test_y['Date'] = pd.to_datetime(df_test_y['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>144730.000000</td>\n",
+       "      <td>144730.0</td>\n",
+       "      <td>144730</td>\n",
+       "      <td>144730.000000</td>\n",
+       "      <td>144730.000000</td>\n",
+       "      <td>144730.000000</td>\n",
+       "      <td>144730.0</td>\n",
+       "      <td>144730.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>558.427195</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2014-04-11 01:37:15.417674496</td>\n",
+       "      <td>204.183189</td>\n",
+       "      <td>35.786817</td>\n",
+       "      <td>0.024826</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.018821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2013-01-06 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>280.000000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2013-08-18 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>558.000000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2014-03-30 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>838.000000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2014-12-14 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1115.000000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2015-07-26 00:00:00</td>\n",
+       "      <td>37376.000000</td>\n",
+       "      <td>5145.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>321.909484</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1613.243517</td>\n",
+       "      <td>284.606877</td>\n",
+       "      <td>0.155594</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.135894</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Store  DayOfWeek                           Date          Sales  \\\n",
+       "count  144730.000000   144730.0                         144730  144730.000000   \n",
+       "mean      558.427195        7.0  2014-04-11 01:37:15.417674496     204.183189   \n",
+       "min         1.000000        7.0            2013-01-06 00:00:00       0.000000   \n",
+       "25%       280.000000        7.0            2013-08-18 00:00:00       0.000000   \n",
+       "50%       558.000000        7.0            2014-03-30 00:00:00       0.000000   \n",
+       "75%       838.000000        7.0            2014-12-14 00:00:00       0.000000   \n",
+       "max      1115.000000        7.0            2015-07-26 00:00:00   37376.000000   \n",
+       "std       321.909484        0.0                            NaN    1613.243517   \n",
+       "\n",
+       "           Customers           Open     Promo  SchoolHoliday  \n",
+       "count  144730.000000  144730.000000  144730.0  144730.000000  \n",
+       "mean       35.786817       0.024826       0.0       0.018821  \n",
+       "min         0.000000       0.000000       0.0       0.000000  \n",
+       "25%         0.000000       0.000000       0.0       0.000000  \n",
+       "50%         0.000000       0.000000       0.0       0.000000  \n",
+       "75%         0.000000       0.000000       0.0       0.000000  \n",
+       "max      5145.000000       1.000000       0.0       1.000000  \n",
+       "std       284.606877       0.155594       0.0       0.135894  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sundays = df_test[df_test[\"DayOfWeek\"] == 7]\n",
+    "sundays.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5659</th>\n",
+       "      <td>85</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015-07-26</td>\n",
+       "      <td>11421</td>\n",
+       "      <td>1606</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5696</th>\n",
+       "      <td>122</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015-07-26</td>\n",
+       "      <td>5773</td>\n",
+       "      <td>707</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5783</th>\n",
+       "      <td>209</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015-07-26</td>\n",
+       "      <td>3742</td>\n",
+       "      <td>354</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5833</th>\n",
+       "      <td>259</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015-07-26</td>\n",
+       "      <td>15998</td>\n",
+       "      <td>2857</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5836</th>\n",
+       "      <td>262</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015-07-26</td>\n",
+       "      <td>32547</td>\n",
+       "      <td>4783</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011252</th>\n",
+       "      <td>733</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>11226</td>\n",
+       "      <td>2584</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011288</th>\n",
+       "      <td>769</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>6995</td>\n",
+       "      <td>1764</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011382</th>\n",
+       "      <td>863</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>2067</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011467</th>\n",
+       "      <td>948</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>6024</td>\n",
+       "      <td>1402</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011616</th>\n",
+       "      <td>1097</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>8258</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3593 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Store  DayOfWeek       Date  Sales  Customers  Open  Promo  \\\n",
+       "5659        85          7 2015-07-26  11421       1606     1      0   \n",
+       "5696       122          7 2015-07-26   5773        707     1      0   \n",
+       "5783       209          7 2015-07-26   3742        354     1      0   \n",
+       "5833       259          7 2015-07-26  15998       2857     1      0   \n",
+       "5836       262          7 2015-07-26  32547       4783     1      0   \n",
+       "...        ...        ...        ...    ...        ...   ...    ...   \n",
+       "1011252    733          7 2013-01-06  11226       2584     1      0   \n",
+       "1011288    769          7 2013-01-06   6995       1764     1      0   \n",
+       "1011382    863          7 2013-01-06   2067        255     1      0   \n",
+       "1011467    948          7 2013-01-06   6024       1402     1      0   \n",
+       "1011616   1097          7 2013-01-06   8258       2003     1      0   \n",
+       "\n",
+       "        StateHoliday  SchoolHoliday  \n",
+       "5659               0              0  \n",
+       "5696               0              0  \n",
+       "5783               0              0  \n",
+       "5833               0              0  \n",
+       "5836               0              0  \n",
+       "...              ...            ...  \n",
+       "1011252            0              0  \n",
+       "1011288            0              0  \n",
+       "1011382            0              0  \n",
+       "1011467            a              0  \n",
+       "1011616            0              0  \n",
+       "\n",
+       "[3593 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sundays_sales = sundays[sundays[\"Sales\"]>0]\n",
+    "sundays_sales\n"
    ]
   },
   {
