--- a/notebooks/time-series-analysis.ipynb
+++ b/notebooks/time-series-analysis.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85f0a251756b43d783a506000296e4d1",
+       "model_id": "656b98b772a24ae2a0f05db51fc8946a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -446,12 +446,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv('./data/rossmann-store-sales/train.csv',parse_dates=True,low_memory=False)\n",
-    "df_test_y = pd.read_csv('./data/rossmann-store-sales/test.csv',parse_dates=True,low_memory=False)\n",
+    "df_test = pd.read_csv('../../data/rossmann-store-sales/train.csv',parse_dates=True,low_memory=False)\n",
+    "df_test_y = pd.read_csv('../../data/rossmann-store-sales/test.csv',parse_dates=True,low_memory=False)\n",
     "df_test['Date'] = pd.to_datetime(df_test['Date'])\n",
     "df_test_y['Date'] = pd.to_datetime(df_test_y['Date'])"
    ]
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "[3593 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,6 +830,26 @@
    "source": [
     "sundays_sales = sundays[sundays[\"Sales\"]>0]\n",
     "sundays_sales\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5773.818972305593)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test[\"Sales\"].mean()"
    ]
   },
   {
